tests/textual/error/lessThanEqualsInteger-bool-wrong-1st-argument.uplc
(program 1.0.0[[(builtin lessThanEqualsInteger)(con bool True)](con integer 10)])